--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://boozallen.github.io/sdp-docs/jte/1.6/index.html" />
+      <meta http-equiv = "refresh" content = "0; url = https://boozallen.github.io/sdp-docs" />
    </head>
 </html>
